增加了侧滑菜单 跟新侧滑的宽度

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorWrite">#fcfafb</color>
+    <color name="colorBlack">#0d0d0d</color>
+
 </resources>
