--- a/app/src/main/res/drawable/textshape.xml
+++ b/app/src/main/res/drawable/textshape.xml
@@ -4,16 +4,21 @@
 
   <corners
          android:bottomLeftRadius="20dp"
-         android:bottomRightRadius="25dp"
+         android:bottomRightRadius="20dp"
          android:radius="8dp"
-         android:topLeftRadius="5dp"
-         android:topRightRadius="15dp"
+         android:topLeftRadius="20dp"
+         android:topRightRadius="20dp"
       ></corners>
 
     <padding
-          android:bottom="1dp"
-          android:left="1dp"
-          android:right="1dp"
-          android:top="1dp" />
+          android:bottom="2dp"
+          android:left="2dp"
+          android:right="2dp"
+          android:top="2dp" />
 
+
+<stroke
+    android:width="1dp"
+    android:color="@color/colorBlack"
+    ></stroke>
 </shape>
