--- a/app/src/main/res/layout/left_menu.xml
+++ b/app/src/main/res/layout/left_menu.xml
@@ -1,41 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical" >
+             >
     <LinearLayout
+        android:id="@+id/lin1"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         >
 
         <LinearLayout
+
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
 
             >
             <ImageButton
-                android:layout_width="50dp"
+                android:layout_width="30dp"
                 android:layout_weight="1"
                 android:layout_height="80dp"
-                android:layout_margin="10dp"
+                android:layout_margin="2dp"
                 android:src="@mipmap/skyblue_logo_qq_checked"
                 android:background="@color/colorWrite"
                 />
             <ImageButton
-                android:layout_width="50dp"
+                android:layout_width="30dp"
                 android:layout_weight="1"
                 android:layout_height="80dp"
-                android:layout_margin="10dp"
+                android:layout_margin="2dp"
                 android:background="@color/colorWrite"
                 android:src="@mipmap/skyblue_logo_sinaweibo_checked"
                 />
             <ImageButton
-                android:layout_width="50dp"
+                android:layout_width="30dp"
                 android:layout_weight="1"
                 android:layout_height="80dp"
-                android:layout_margin="10dp"
+                android:layout_margin="2dp"
                 android:background="@color/colorWrite"
                 android:src="@mipmap/skyblue_logo_wechat_checked"
                 />
@@ -43,8 +45,9 @@
         </LinearLayout>
 
         <TextView
-            android:layout_width="100dp"
-            android:layout_height="20dp"
+            android:gravity="center"
+            android:layout_width="120dp"
+            android:layout_height="25dp"
             android:layout_margin="20dp"
             android:text="更多登陆方式>"
             android:background="@drawable/textshape"
@@ -52,22 +55,20 @@
 
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/id_listview_categories"
-        android:layout_width="match_parent"
-        android:layout_height="350dp"
-        ></ListView>
+
 
 
     <LinearLayout
+        android:id="@+id/lin2"
+        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         >
 
         <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@color/colorWrite"
@@ -75,8 +76,8 @@
             />
 
         <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@color/colorWrite"
@@ -84,14 +85,25 @@
             />
 
         <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@color/colorWrite"
             android:src="@mipmap/ic_home_date"
+
             />
 
     </LinearLayout>
 
-</LinearLayout>
+    <ListView
+        android:layout_below="@id/lin1"
+        android:id="@+id/id_listview_categories"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/lin2"
+        ></ListView>
+
+
+
+</RelativeLayout>
